--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -21,5 +21,11 @@
  sointuva_religion_desc:0 "Sointuva is the name of ancient pagan practices and mythology common among Pohjoista people. Central tenet is the fight of Hurskas (good people of god) against Ilkeä (evil enemies of god). This faith claims that the world was created by a good god, but then evil spirit created evil in it, so in response god created humanity to rule over and protect his creation."
  marstonic_pantheon:0 "Marstonic Pantheon"
  
+ anhativaz:0 "Anhativaz"
+ anichvaro:0 "Anichvaro"
+ tushivi:0 "Tushivi"
+
+ hestani:0 "Hestani"
+ nahitar:0 "Nahitar"
 
  
