--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -41,3 +41,13 @@
  
  chilverchian_march:0 "Chilverchian March"
  chilverchian_march_desc:0 "Chilverchian Marches are composed of king errants seeking glory by conquest of foreign lands."
+
+ nusabate_reform:0 "Nusabate"
+ nusabate_reform_desc:0 "Nusabate is an autocratic state ruled by one, extensive family."
+ NUSABATE:0 "Nusabate"
+ GRAND_NUSABATE:0 "Grand Nusabate"
+ NUSABAT:0 "Nusabat"
+ GRAND_NUSABAT:0 "Grand Nusabat"
+ NUSABATIN:0 "Nusabatin"
+ GRAND_NUSABATIN:0 "Grand Nusabatin"
+ 
