--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -112,3 +112,25 @@
  kakigian_visparayan_group:0 "Kakigian Visparayan"
  memlashali:0 "Memlashali"
  haptoiring:0 "Haptoiring"
+
+ pamkusean_group:0 "Pamkusean"
+ ilikiomenoi:0 "Ilikiomenoi"
+ kainimoei:0 "Kainimoei"
+ nosecinei:0 "Nosecinei"
+
+ visparayan_group:0 "Visparayan"
+ fravasumi:0 "Fravasumi"
+
+ zakarturi_group:0 "Zakarturi"
+ mesiheisi:0 "Mesiheisi"
+ gapishvro:0 "Gapishvro"
+
+ akkcortians_group:0 "Akkcortians"
+ cyromeids:0 "Cyromeid"
+ mamerians:0 "Mamerian"
+
+ hestan_group:0 "Hestan"
+ ewitrawi:0 "Ewitrawi"
+ mewitan:0 "Mewitan"
+ ehtywiran:0 "Ehtywiran"
+ hussen:0 "Hussen"
