--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -502,3 +502,8 @@
  EHT_ADJ:0 "Ehtywiran"
  FRA:0 "Fravasum"
  FRA_ADJ:0 "Fravasumi"
+
+ MRS:0 "Marstonia"
+ MRS_ADJ:0 "Marstonian"
+ IND:0 "Indrigerland"
+ IND_ADJ:0 "Indriger"
