--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -108,11 +108,11 @@
  PROV107:0 "Prov107"
  PROV108:0 "Prov108"
  PROV109:0 "Wyrmegnac"
- PROV110:0 "Prov110"
+ PROV110:0 "Dobutap"
  PROV111:0 "Geoberic Bay" 
  PROV112:0 "Prov112"
  PROV113:0 "Prov113"
- PROV114:0 "Prov114"
+ PROV114:0 "Guranamar"
  PROV115:0 "Northern Niheyabdan Sea"
  PROV116:0 "Vallacielo"
  PROV117:0 "Lentisca"
@@ -209,7 +209,7 @@
  PROV208:0 "Alsham"
  PROV209:0 "Liqalnahr"
  PROV210:0 "Almufqoodah"
- PROV211:0 "Prov211"
+ PROV211:0 "Isealdún"
  PROV212:0 "Coast of Rubmeo"
  PROV213:0 "Qadruq"
  PROV214:0 "Alnithar"
@@ -358,18 +358,18 @@
  PROV357:0 "Lovveka"
  PROV358:0 "358"
  PROV359:0 "Hafani Coast"
- PROV360:0 "360"
+ PROV360:0 "Bay of Fravasum"
  PROV361:0 "East Furmarian Sea"
- PROV362:0 "362"
- PROV363:0 "363"
+ PROV362:0 "Arisái"
+ PROV363:0 "Mathan"
  PROV364:0 "Rihapestid"
  PROV365:0 "Nunwals"
  PROV366:0 "Coast of Eamenos"
  PROV367:0 "Coast of Delieania"
- PROV368:0 "368"
+ PROV368:0 "Inarid"
  PROV369:0 "Lending"
  PROV370:0 "Enorland"
- PROV371:0 "371"
+ PROV371:0 "Coilechall"
  PROV372:0 "372"
  PROV373:0 "373"
  PROV374:0 "374"
@@ -754,7 +754,7 @@
  PROV753:0 "Strait of Aideich"
  PROV754:0 "Zawila"
  PROV755:0 "Bialogorze"
- PROV756:0 "756"
+ PROV756:0 "Ainaichen Coast"
  PROV757:0 "Lasek"
  PROV758:0 "758"
  PROV759:0 "759"
@@ -794,16 +794,16 @@
  PROV793:0 "Erakasibir"
  PROV794:0 "Enging"
  PROV795:0 "South Ithagen Sea"
- PROV796:0 "Ainaichen Coast"
+ PROV796:0 "Ainil"
  PROV797:0 "Ithagen Sea"
- PROV798:0 "798"
- PROV799:0 "799"
- PROV800:0 "800"
- PROV801:0 "801"
- PROV802:0 "802"
- PROV803:0 "803"
- PROV804:0 "804"
- PROV805:0 "805"
+ PROV798:0 "Sinarusid"
+ PROV799:0 "Itean"
+ PROV800:0 "Duronale"
+ PROV801:0 "Wyallell"
+ PROV802:0 "Maeydd"
+ PROV803:0 "Arei"
+ PROV804:0 "Wydei"
+ PROV805:0 "Chaneraet"
  PROV806:0 "Stánham"
  PROV807:0 "Ulenbeorg"
  PROV808:0 "Lebondun"
@@ -813,28 +813,28 @@
  PROV812:0 "Arinuld"
  PROV813:0 "Stanrocc"
  PROV814:0 "Puckroyd"
- PROV815:0 "815"
- PROV816:0 "816"
+ PROV815:0 "Beneul"
+ PROV816:0 "Ceafìlta"
  PROV817:0 "Eastern Indriger Sea"
- PROV818:0 "818"
- PROV819:0 "819"
- PROV820:0 "820"
+ PROV818:0 "Seann uaigh"
+ PROV819:0 "Rathafad"
+ PROV820:0 "Oddac"
  PROV821:0 "Coast of Venaklulle"
- PROV822:0 "822"
- PROV823:0 "823"
- PROV824:0 "824"
- PROV825:0 "825"
- PROV826:0 "826"
- PROV827:0 "827"
+ PROV822:0 "Dòinnich"
+ PROV823:0 "Creagàrd"
+ PROV824:0 "Aicearran Sea"
+ PROV825:0 "Bearràrd"
+ PROV826:0 "Sinea"
+ PROV827:0 "Ithadeagu"
  PROV828:0 "828"
- PROV829:0 "829"
- PROV830:0 "830"
- PROV831:0 "831"
- PROV832:0 "832"
- PROV833:0 "833"
- PROV834:0 "834"
- PROV835:0 "835"
- PROV836:0 "836"
+ PROV829:0 "Geoberic Plateau"
+ PROV830:0 "Dhan"
+ PROV831:0 "Bhaithar"
+ PROV832:0 "Cháibhea"
+ PROV833:0 "Bhariloi"
+ PROV834:0 "Chaibhir"
+ PROV835:0 "Seceratians"
+ PROV836:0 "Western Ggrub Sea"
  PROV837:0 "Gittinora"
  PROV838:0 "Taranne"
  PROV839:0 "Baratalio"
