--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -58,7 +58,13 @@
 
  northern_anavatic_group:0 "Northern Anavatic"
  buyorman:0 "Buyorman"
+ ebigeizu:0 "Ebigeizu"
+
+ steppe_anavatic_group:0 "Steppe Anavatic"
  tenjakelgan:0 "Tenjakelgan"
+ onerkan:0 "Onerkan"
+ sasemite:0 "Sasemite"
+
  
  labosian_group:0 "Labosian"
  rouvian:0 "Rouvian"
