Cleidemni - Releasable countries
- added 3 new countries with cores in Cleidemni

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -461,6 +461,12 @@
  ACH_ADJ:0 "Achnithian"
  AKN:0 "Aknaoi"
  AKN_ADJ:0 "Aknaoian"
+ HYC:0 "Hyconia"
+ HYC_ADJ:0 "Hyconian"
+ LYM:0 "Lymeces"
+ LYM_ADJ:0 "Lemecesian"
+ EVA:0 "Evacusea"
+ EVA_ADJ:0 "Evacusean"
  TSK:0 "Tskvania"
  TSK_ADJ:0 "Tskvanian"
  SHU:0 "Shusali"
