--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -19,7 +19,7 @@
  nordmark_nation_title:0 "Form Nordmark @NRD"
  nordmark_nation_desc:0 "Just like Glaser people in the west, now gyrdians need to be assimilated to protect the northern border of the empire."
 
- dorchia_nation_title:0 "Unite Dorchia @DRC"
+ dorchia_nation_title:0 "Unite Dorchia @DCH"
  dorchia_nation_desc:0 "Labosian people of Dorchian isles have never been united in a traditional fashion. Many of them were only interested in their own wealth and splendor and any occasions when dorchian "kingdoms" were brought together was in times of foreign invasion. Now it is time to show the world strength of unified Dorchia!"
 
  aqerb_nation_title:0 "Unite Aqerb @AQE"
