--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -26,3 +26,9 @@
  fawud_tradenode:0 "Sayaanud"
  muzbah_tradenode:0 "Muzbah"
  antawil_tradenode:0 "Antawil"
+ panourgian_sea_tradenode:0 "Panourgian Sea"
+ kidinare_tradenode:0 "Kidinare"
+ timis_tradenode:0 "Timis"
+ fravasum_tradenode:0 "Barzakhan"
+ mammeria_tradenode:0 "Mammeria"
+ yhalum_tradenode:0 "Yhalum"
