--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -31,4 +31,4 @@
  timis_tradenode:0 "Timis"
  fravasum_tradenode:0 "Barzakhan"
  mammeria_tradenode:0 "Mammeria"
- yhalum_tradenode:0 "Yhalum"
+ yhalum_tradenode:0 "Yhälum"
