--- a/localisation/TD_yaltazim_l_english.yml
+++ b/localisation/TD_yaltazim_l_english.yml
@@ -3,8 +3,8 @@
  pick_yaltazim_blessing:0 "Pick a Teaching"
  be_righteous:0 "Be Righteous"
  give_alms:0 "Give Alms"
- fight_infidels:0 "Fight Infidels"
- help_pagans:0 "Help Pagans"
+ fight_infidels:0 "Fight the Infidels"
+ help_pagans:0 "Help the Pagans"
  support_the_churches:0 "Support the Churches"
  praise_the_creation:0 "Praise the Creation"
  spread_the_ideals:0 "Spread the Ideals"
