Zakarturi Government Reform
- uh

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -42,6 +42,9 @@
  chilverchian_march:0 "Chilverchian March"
  chilverchian_march_desc:0 "Chilverchian Marches are composed of king errants seeking glory by conquest of foreign lands."
 
+zakarturi_kingdom:0 "Zakarturi Kingdom"
+zakarturi_kingdom_desc:"This form of governance is a display of zakarturi persistance of holding to old lands and traditions with this governance method being older than known history of Saelian Empire."
+
  nusabate_reform:0 "Nusabate"
  nusabate_reform_desc:0 "Nusabate is an autocratic state ruled by one, extensive family."
  NUSABATE:0 "Nusabate"
