Steppes - Balkanization - Localisation
- added localisation to new countries

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -488,6 +488,33 @@
  BEL:0 "Beliorman"
  BEL_ADJ:0 "Beliormian"
  
+ ABZ:0 "Abzoesu"
+ ABZ_ADJ:0 "Abzoesian"
+ ALN:0 "Alangki"
+ ALN_ADJ:0 "Alangkian"
+ BUK:0 "Bukatar"
+ BUK_ADJ:0 "Bukatari"
+ CED:0 "Cedodak"
+ CED_ADJ:0 "Cedodakian"
+ IKU:0 "Ikunac"
+ IKU_ADJ:0 "Ikunaci"
+ INE:0 "Inelini"
+ INE_ADJ:0 "Inelinian"
+ KUL:0 "Kulthia"
+ KUL_ADJ:0 "Kulthian"
+ LUZ:0 "Luzidi"
+ LUZ_ADJ:0 "Luzidian"
+ MEA:0 "Mieata"
+ MEA_ADJ:0 "Mieatan"
+ NIN:0 "Ninluzir"
+ NIN_ADJ:0 "Ninluzian"
+ OGI:0 "Ogivur"
+ OGI_ADJ:0 "Ogivuri"
+ SEN:0 "Seniria"
+ SEN_ADJ:0 "Senirian"
+ YIN:0 "Yinnaya"
+ YIN_ADJ:0 "Yinnayan"
+ 
  MEM:0 "Memlashal"
  MEM_ADJ:0 "Memlashan"
  ZUM:0 "Zumnaseth"
