--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -32,3 +32,8 @@
  fravasum_tradenode:0 "Barzakhan"
  mammeria_tradenode:0 "Mammeria"
  yhalum_tradenode:0 "Yhälum"
+ tikinutl_tradenode:0 "Tikinutl"
+ nalanaq_tradenode:0 "Nalanaq"
+ xamaneh_tradenode:0 "Xamaneh"
+ atlaxotlatl_tradenode:0 "Atlaxotlatl"
+ new_wesburg_tradenode:0 "New Wessburg"
