Zakarturi Government part 2
- added government to Shuasali and Tskvania

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -38,6 +38,8 @@
  
  masccion_dictatorship_reform:0 "Masccion Dictatorship"
  masccion_dictatorship_reform_desc:0 "Our government is a peasant republic created by Masccione family that slowly drifted into nepotism and dictatorship."
+ penal_company_reform:0 "Penal Company"
+ penal_company_reform_desc:0 "Our state and population is mostly made from bandits, traitors, revolutionaries and religious fanatics. Everyone not welcome in Zakarturi Empire ends here with hope that recolonization will bring amnesty of their crimes, or new personal riches."
  
  chilverchian_march:0 "Chilverchian March"
  chilverchian_march_desc:0 "Chilverchian Marches are composed of king errants seeking glory by conquest of foreign lands."
