--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -37,3 +37,4 @@
  xamaneh_tradenode:0 "Xamaneh"
  atlaxotlatl_tradenode:0 "Atlaxotlatl"
  new_wesburg_tradenode:0 "New Wessburg"
+ minafariq_tradenode:0 "Minafariq"
