--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -19,3 +19,19 @@
  eastern_camaria_region:0 "Eastern Camaria"
  confinia_region:0 "Confinia"
  fawud_region:0 "Fawud"
+ pamkusea_region:0 "Pamkusea"
+ zakarturi_region:0 "Zakarturi"
+ mammeria_region:0 "Mammeria"
+ fravasum_bay_region:0 "Fravasumi Bay"
+ hestan_region:0 "Hestan"
+ west_maqitan_sea:0 "west Maqitan Sea"
+ tonatitlan_region:0 "Tonatitlan"
+ nalanaq_region:0 "Nalanaq"
+ xamaneh_region:0 "Xamaneh"
+ panpallpa_region:0 "Panpallpa"
+ grossenseen_region:0 "Grossenseen" 
+ north_western_niheyan_ocean:0 "North Western Niheyan Ocean"
+ north_eastern_niheyan_ocean:0 "North Eastern Niheyan Ocean"
+ northern_ocean:0 "Northern Ocean"
+ mesutia_region:0 "Mesutia"
+ lamedin_region:0 "Lamedin"
