Modern Chivalry reform
- added military reform for chilverchian marches

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -43,9 +43,11 @@
  
  chilverchian_march:0 "Chilverchian March"
  chilverchian_march_desc:0 "Chilverchian Marches are composed of king errants seeking glory by conquest of foreign lands."
+ modern_chivalry_reform:0 "Modern Chivalry"
+ modern_chivalry_reform_desc:0 "Our nobility gained battle experience during conquest of these lands from foreigners. Some of them dropped their life as landed lords and became part of our army as cavalry that arouses fear on battlefields."
 
-zakarturi_kingdom:0 "Zakarturi Kingdom"
-zakarturi_kingdom_desc:"This form of governance is a display of zakarturi persistance of holding to old lands and traditions with this governance method being older than known history of Saelian Empire."
+ zakarturi_kingdom:0 "Zakarturi Kingdom"
+ zakarturi_kingdom_desc:0 "This form of governance is a display of zakarturi persistance of holding to old lands and traditions with this governance method being older than known history of Saelian Empire."
 
  nusabate_reform:0 "Nusabate"
  nusabate_reform_desc:0 "Nusabate is an autocratic state ruled by one, extensive family."
