--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -47,3 +47,6 @@
  
  indrigerland_nation_title:0 "Unite Indrigerland @IND"
  indrigerland_nation_desc:0 "Unite Indrigerland to direct our focus for greater prosperity for all."
+
+ ueyaltepatl_nation_title:0 "Become the Great State @UEY"
+ ueyaltepatl_nation_desc:0 "Xamanehi ambitions grow bigger and bigger, year by year. Taedian technology allows us to finally achieve the dream of defeating Tonatitlan and claiming this title for ourselves."
