--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -2,3 +2,9 @@
  northern_taedium_superregion:0 "Northern Taedium"
  southern_taedium_superregion:0 "Southern Taedium"
  pohjoismaa_superregion:0 "Pohjoismaa"
+ wasichantlia_superregion:0 "Wasichantlia"
+ northern_basin_superregion:0 "Northern Basin"
+ western_kakigia_superregion:0 "Western Kakigia"
+ hestani_basin_superregion:0 "Hestani Basin"
+ northern_sahila_superregion:0 "Northern Sahila"
+ westcoast_superregion:0 "Westcoast"
