--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -62,3 +62,6 @@
  cleidemni_council_reform_desc:0 "When we escaped to this area we established war council filled with generals to oversee preparations to reclaim our lands. But this council has begun to slowly overshadow our monarch sometimes forcing elections and pushing their agendas."
  generals:0 "Generals"
  generals_MECHANIC_TOOLTIP:0 "Generals"
+
+ settled_steppe_horde:0 "Steppe Horde"
+ settled_steppe_horde_desc:0 "While being more centralized and better governed than smaller nomadic hordes, this type of horde still is focused on raiding foreign countries for loot."
