--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -24,4 +24,4 @@
  nordkirche_cathedral_desc:0 "Soon to be the most magnificent cathedral in the entire saelian world."
 
  church_of_saint_gerard:0 "Church of Saint Gérard"
- church_of_saint_gerard_desc:0 "This pagan temple was converted into a saelian church by the Eneratian Emperor in III century."
+ church_of_saint_gerard_desc:0 "This pagan temple was converted into a saelian church by the Eneratian Emperor in the III century."
