--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -9,8 +9,8 @@
  COLONIAL_Root_Culture_GetName_panpallpa:0 "[Root.GetAdjective] Panpallpa"
  COLONIAL_Root_Culture_GetName_panpallpa_ADJ:0 "[Root.GetAdjective] Panpallpan"
 
- COLONIAL_ARDWAJDI:0 "Ardwajdi"
- COLONIAL_ARDWAJDI_ADJ:0 "Ardwajdi"
+ COLONIAL_ardwajdi:0 "Ardwajdi"
+ COLONIAL_ardwajdi_ADJ:0 "Ardwajdi"
  COLONIAL_new_verracia:0 "New Verracia"
  COLONIAL_new_verracia_ADJ:0 "New Verracian"
  COLONIAL_Root_Culture_GetName_ardwajdi:0 "[Root.GetAdjective] Ardwajda"
