--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -27,3 +27,9 @@
 
  COLONIAL_Root_Culture_GetName_talamgalt:0 "[Root.GetAdjective] Talamgalt"
  COLONIAL_Root_Culture_GetName_talamgalt_ADJ:0 "[Root.GetAdjective] Talamgalter"
+
+ COLONIAL_Root_Culture_GetName_tarhia:0 "[Root.GetAdjective] Tarhia"
+ COLONIAL_Root_Culture_GetName_tarhia_ADJ:0 "[Root.GetAdjective] Tarhian"
+
+ COLONIAL_Root_Culture_GetName_moorfluss:0 "[Root.GetAdjective] Moorfluss"
+ COLONIAL_Root_Culture_GetName_moorfluss_ADJ:0 "[Root.GetAdjective] Moorflusser"
