--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -8,3 +8,4 @@
  hestani_basin_superregion:0 "Hestani Basin"
  northern_sahila_superregion:0 "Northern Sahila"
  westcoast_superregion:0 "Westcoast"
+ greater_tarhia_superregion:0 "Greater Tarhia"
