--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -35,3 +35,11 @@
  northern_ocean:0 "Northern Ocean"
  mesutia_region:0 "Mesutia"
  lamedin_region:0 "Lamedin"
+ cassidy_valley_region:0 "Cassidy Valley"
+ tarhia_region:0 "Tarhia"
+ lower_moorfluus_region:0 "lower Moorfluss"
+ eastern_chantlian_coast_region:0 "Mathilda's Bay"
+ northern_niheyan_ocean:0 "Northern Niheyan Ocean"
+ western_niheyan_ocean:0 "Western Niheyan Ocean"
+ eastern_amin_ocean:0 "Eastern Amin Ocean"
+ 
