--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -1,14 +1,17 @@
 ﻿l_english:
  COLONIAL_REGION_New_Root_GetName:0 "New [Root.GetName]"
 
+ colonial_tonatiqan:0 "Colonial Tonatiqan""
  COLONIAL_camanej:0 "Camanej"
  COLONIAL_camanej_ADJ:0 "Camaneji"
  COLONIAL_Root_Culture_GetName_tonatiqan:0 "[Root.GetAdjective] Tonatiqan"
  COLONIAL_Root_Culture_GetName_tonatiqan_ADJ:0 "[Root.GetAdjective] Tonatiqani"
 
+ colonial_panpallpa:0 "Colonial Panpallpa"
  COLONIAL_Root_Culture_GetName_panpallpa:0 "[Root.GetAdjective] Panpallpa"
  COLONIAL_Root_Culture_GetName_panpallpa_ADJ:0 "[Root.GetAdjective] Panpallpan"
 
+ colonial_ardwajdi:0 "Colonial Ardwajdi"
  COLONIAL_ardwajdi:0 "Ardwajdi"
  COLONIAL_ardwajdi_ADJ:0 "Ardwajdi"
  COLONIAL_new_verracia:0 "New Verracia"
@@ -16,6 +19,7 @@
  COLONIAL_Root_Culture_GetName_ardwajdi:0 "[Root.GetAdjective] Ardwajda"
  COLONIAL_Root_Culture_GetName_ardwajdi_ADJ:0 "[Root.GetAdjective] Ardwajdan"
 
+ colonial_grossenseen:0 "Colonial Grossenseen"
  COLONIAL_adelbertland:0 "Adelbertland"
  COLONIAL_adelbertland_ADJ:0 "Adelbertlander"
  COLONIAL_new_olegaria:0 "New Olegaria"
@@ -25,11 +29,18 @@
  COLONIAL_Root_Culture_GetName_grossenseen:0 "[Root.GetAdjective] Grossenseen"
  COLONIAL_Root_Culture_GetName_grossenseen_ADJ:0 "[Root.GetAdjective] Grossenseeni"
 
+ colonial_talamgalt:0 "Colonial Talamgalt"
+ COLONIAL_talamgalt_custom:0 "Talamgalt"
+ COLONIAL_talamgalt_custom_ADJ:0 "Talamgalter"
  COLONIAL_Root_Culture_GetName_talamgalt:0 "[Root.GetAdjective] Talamgalt"
  COLONIAL_Root_Culture_GetName_talamgalt_ADJ:0 "[Root.GetAdjective] Talamgalter"
-
+ 
+ colonial_tarhia:0 "Colonial Tarhia"
+ COLONIAL_new_ithag:0 "New Ithag"
+ COLONIAL_new_ithag_ADJ:0 "New Ithagian"
  COLONIAL_Root_Culture_GetName_tarhia:0 "[Root.GetAdjective] Tarhia"
  COLONIAL_Root_Culture_GetName_tarhia_ADJ:0 "[Root.GetAdjective] Tarhian"
 
+ colonial_moorfluss:0 "Colonial Moorfluss"
  COLONIAL_Root_Culture_GetName_moorfluss:0 "[Root.GetAdjective] Moorfluss"
  COLONIAL_Root_Culture_GetName_moorfluss_ADJ:0 "[Root.GetAdjective] Moorflusser"
