--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -26,6 +26,8 @@
  COLONIAL_new_olegaria_ADJ:0 "New Olegarian"
  COLONIAL_evesland:0 "Evesland"
  COLONIAL_evesland_ADJ:0 "Eveslander"
+ COLONIAL_alghaba:0 "Alghaba"
+ COLONIAL_alghaba_ADJ:0 "Alghabian"
  COLONIAL_Root_Culture_GetName_grossenseen:0 "[Root.GetAdjective] Grossenseen"
  COLONIAL_Root_Culture_GetName_grossenseen_ADJ:0 "[Root.GetAdjective] Grossenseeni"
 
