gyrdian prov names

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -110,8 +110,8 @@
  PROV109:0 "Wyrmegnac"
  PROV110:0 "Dobutap"
  PROV111:0 "Geoberic Bay" 
- PROV112:0 "Prov112"
- PROV113:0 "Prov113"
+ PROV112:0 "Banlathar"
+ PROV113:0 "Zaynashar Depths"
  PROV114:0 "Guranamar"
  PROV115:0 "Northern Niheyabdan Sea"
  PROV116:0 "Vallacielo"
@@ -356,7 +356,7 @@
  PROV355:0 "Luvima"
  PROV356:0 "Zilverpoort"
  PROV357:0 "Lovveka"
- PROV358:0 "358"
+ PROV358:0 "Esydian Bay"
  PROV359:0 "Hafani Coast"
  PROV360:0 "Bay of Fravasum"
  PROV361:0 "East Furmarian Sea"
@@ -488,7 +488,7 @@
  PROV487:0 "487"
  PROV488:0 "488"
  PROV489:0 "Nekody"
- PROV490:0 "490"
+ PROV490:0 "Martefaz"
  PROV491:0 "Dreckburg"
  PROV492:0 "Newygrod"
  PROV493:0 "Holmberg"
@@ -740,10 +740,10 @@
  PROV739:0 "Wrodawa"
  PROV740:0 "Bugno"
  PROV741:0 "Outer Indriger Sea"
- PROV742:0 "742"
- PROV743:0 "743"
- PROV744:0 "744"
- PROV745:0 "745"
+ PROV742:0 "Bihcoad"
+ PROV743:0 "Bugoabl"
+ PROV744:0 "Senowert"
+ PROV745:0 "Kurkagan"
  PROV746:0 "Witkow"
  PROV747:0 "Northern Adasmerragadde Coast"
  PROV748:0 "Eordygian Sea"
@@ -756,22 +756,22 @@
  PROV755:0 "Bialogorze"
  PROV756:0 "Ainaichen Coast"
  PROV757:0 "Lasek"
- PROV758:0 "758"
- PROV759:0 "759"
- PROV760:0 "760"
- PROV761:0 "761"
- PROV762:0 "762"
- PROV763:0 "763"
- PROV764:0 "764"
- PROV765:0 "765"
- PROV766:0 "766"
- PROV767:0 "767"
- PROV768:0 "768"
- PROV769:0 "769"
- PROV770:0 "770"
- PROV771:0 "771"
- PROV772:0 "772"
- PROV773:0 "773"
+ PROV758:0 "Letosenni"
+ PROV759:0 "Bihamenez"
+ PROV760:0 "Baeweran"
+ PROV761:0 "Staotan"
+ PROV762:0 "Kahbi Sea"
+ PROV763:0 "Kaouenncoad"
+ PROV764:0 "Avalpast"
+ PROV765:0 "Gronsan Lake"
+ PROV766:0 "Gronsanked"
+ PROV767:0 "Balagox"
+ PROV768:0 "Dekalint"
+ PROV769:0 "Gwaganoue"
+ PROV770:0 "Alkiselg"
+ PROV771:0 "Kontandenn"
+ PROV772:0 "Kajonnae"
+ PROV773:0 "Kwaven"
  PROV774:0 "Cadizerio"
  PROV775:0 "Lara"
  PROV776:0 "Prawy"
