--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -3934,9 +3934,9 @@
  caddo:0 "Caddo"
  cheyenne:0 "Cheyenne"
  susquehannock:0 "Susquehannock"
- mesoamerican:0 "Mesoamerican"
+ mesoamerican:0 "Wasichantlian"
  north_american_desc:0 "With the North American technology group, technology levels are 250% more expensive (350%)."
- mesoamerican_desc:0 "With the Mesoamerican technology group, technology levels are 150% more expensive (250%)."
+ mesoamerican_desc:0 "With the Wasichantlian technology group, technology levels are 150% more expensive (250%)."
  south_american_desc:0 "With the South American technology group, technology levels are 250% more expensive (350%)."
  mesoamerican_spearmen:0 "Mesoamerican Spearmen"
  mesoamerican_spearmenDESCR:0 "The basic unit of armies of Mesoamerica. They were usually a peasant levy led by aristocratic officers and armed with spear and shield. This unit formed the backbone of the armies of states like the Aztec Empire."
