--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -488,7 +488,7 @@
  confucianism:0 "Confucian"
  eastern:0 "Eastern"
  hinduism:0 "Hindu"
- muslim:0 "Muslim"
+ muslim:0 "Yermic"
  orthodox:0 "Orthodox"
  pagan:0 "Pagan"
  protestant:0 "Protestant"
@@ -7136,7 +7136,7 @@
  desc_kingdom_of_god:0 "The Pope has declared himself as the custodian of the Kingdom of God on Earth."
  CULTURE_GROUP_UNION:0 "§Y$NEW$§W cultures give no penalties.\n"
  RESET_CULTURE_GROUP_UNION:0 "§Y$OLD$§W cultures may now give penalties.\n"
- western:0 "Western"
+ western:0 "Saelian"
  basque_group:0 "Basque"
  sub_saharan:0 "West African"
  SPAWN_EVENT:1 "The event '§Y$WHICH$§W' happens$TIME$.\n"
@@ -7965,7 +7965,7 @@
  annex_dulkadir_desc:0 "Having brought the Beylik of Dulkadir to heel by ensuring they recognize the Sultan as their overlord, now is the time to end their pretensions once and for all. We must absorb the Anatolian Beylik of Dulkadir into the Empire proper."
  annex_ramazan_title:0 "Annex Ramazan"
  annex_ramazan_desc:0 "Although the Bey of Ramazan has wisely decided to acknowledge the Sultan's superiority, there are still those who caution that he might prove faithless. Let us bring the lands of Ramazan into our control."
- westerngfx:0 "Western"
+ westerngfx:0 "Saelian"
  easterngfx:0 "Eastern"
  muslimgfx:0 "Yermic"
  indiangfx:0 "Indian"
