--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1189,7 +1189,7 @@
  PROV1188:0 "1188"
  PROV1189:0 "1189"
  PROV1190:0 "Lanta"
- PROV1191:0 "1191"
+ PROV1191:0 "Deis Nua"
  PROV1192:0 "1192"
  PROV1193:0 "1193"
  PROV1194:0 "1194"
