ages changes - loc fixes and 1 custom ability

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -189,9 +189,9 @@
  ABSOLUTISM_RULES_OFF:0 "In later ages, absolutism will be a factor which impacts on much control the ruler has over the state."
  last_age_power_projection:0 "Last Age Objectives"
  current_age_power_projection:0 "Age Objectives Fulfilled"
- obj_discover_america:0 "Discover America"
- obj_discover_america_desc:0 "As a nation with a capital in Europe, Asia or Africa, discover at least one province in either North or South America."
- obj_discover_america_tooltip:0 "Discover America"
+ obj_discover_america:0 "Discover the New World"
+ obj_discover_america_desc:0 "As a nation with a capital in Taedium, Sahila, Kakigia or ASIA, discover at least one province in either North or South America."
+ obj_discover_america_tooltip:0 "Discover any province in the New World"
  obj_100_development:0 "Developed Nation"
  obj_100_development_desc:0 "Reach a total of at least 100 development in your nation."
  obj_5_centers_of_trade:0 "Control Centers of Trade"
