--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -42,4 +42,4 @@
  northern_niheyan_ocean:0 "Northern Niheyan Ocean"
  western_niheyan_ocean:0 "Western Niheyan Ocean"
  eastern_amin_ocean:0 "Eastern Amin Ocean"
- 
+ thiccet_region:0 "Thiccet"
