--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -42,3 +42,4 @@
  cassidy_tradenode:0 "Cassidy"
  talamgalt_estuary_tradenode:0 "Talamgalt Estuary"
  tarhia_tradenode:0 "Lower Tarhia"
+ thiccet_tradenode:0 "Thiccet"
