--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -66,13 +66,15 @@
  sasemite:0 "Sasemite"
 
  
- labosian_group:0 "Labosian"
+ continental_labosian_group:0 "Continental Labosian"
  rouvian:0 "Rouvian"
  gyrdian:0 "Gyrdian"
+ glaser:0 "Glaser"
+
+ dorchean_labosian_group:0 "Islander Labosian"
  dorchean:0 "Dorchean"
  nabhini:0 "Nabhini"
  oileamer:0 "Oileamer"
- glaser:0 "Glaser"
 
  marstonian_group:0 "Marstonian"
  aliger:0 "Aliger"
