--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -7,13 +7,16 @@
  eneratian_religion_desc:0 "Eneratianism is the second biggest branch of the Saelian church. It was created during the II century civil war in Saelian faith in which Sigilius in the west and Eneratus in the east both fought for the emperorship. Supporters of Eneratus rejected the idea of tetrarchy and adopted patrimonial doctrine of power. After Eneratian male line became extinct, the church was split between different bishops and became Autokefalic in this process. \n\nJust as Sigilianism, in early days it heavily relied syncretism with local folklores, while still maintaining monotheistic worldview. In 1444 these differences aren't as clear but the influence of local culture still can be seen in regional rites and traditions."
  saelian_ehrenic_pantheon:0 "Ehren Saelianism"
  liemarian:0 "Liemarian"
+ liemarian_religion_desc:0 "Liemarianism is the fruit of saelian reformation which was slowly building up since the XIV century. They reject the monarchical approach of Sigilianism and Eneratianism and argue, that the representative of God on earth should be elected by the saelian community. The elements of original Saelian syncretism are still present within liemarianism but more nuanced than in earlier days."
 
  yermic:0 "Yermic"
  YERMIC_CRUSADE:0 "Jihad"
  yaltazim:0 "Yaltazim"
+ yaltazim_religion_desc:0 "Yaltazimi are the followers of god Ilum who sents prophets on earth to teach people about pious and good life. Believers of this faith follow a plethora of prophets whose works and teachings are the fundaments of Yaltazim faith. First yaltazimi were originally victims of religious persecution in muzbah for following teachings of prophet Nathaniel in the VIII century BCE."
  musarfic_folklore:0 "Musarfic Folklore"
  musarfic_folklore_desc:0 "Musarfic Folklore represents variety of beliefs and cults in fawud desert. They believe that many gods lived Among Us in the past and died the same way a person does. It is common for families to proclaim one of the past gods as their ancestor and use this as a symbol of clan identity."
  ilumist:0 "Ilumist"
+ ilumist_religion_desc:0 "Ilumists are the followers of god Ilum who sents prophets on earth to teach people about pious and good life. Members of this church follow only a specific set of prophets which hasn't change for past 2000 years."
  qubrayian:0 "Qubrayian"
  rah_jadid:0 "Rah Jadid"
 
@@ -28,4 +31,6 @@
  hestani:0 "Hestani"
  nahitar:0 "Nahitar"
 
- 
+ chantlian_paganism:0 "Chantlian Paganism"
+ itonatilu:0 "Itonatilu"
+ lummak_mythology:0 "Lummak Mythology"
