--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -40,6 +40,10 @@
  colonial_tarhia:0 "Colonial Tarhia"
  COLONIAL_new_ithag:0 "New Ithag"
  COLONIAL_new_ithag_ADJ:0 "New Ithagian"
+ COLONIAL_thiccet:0 "Thiccet"
+ COLONIAL_thiccet_ADJ:0 "Thiccetian"
+ COLONIAL_neumark:0 "Neumark"
+ COLONIAL_neumark_ADJ:0 "Neumarker"
  COLONIAL_Root_Culture_GetName_tarhia:0 "[Root.GetAdjective] Tarhia"
  COLONIAL_Root_Culture_GetName_tarhia_ADJ:0 "[Root.GetAdjective] Tarhian"
 
