geoberic colonial nations

--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -4,6 +4,8 @@
  colonial_tonatiqan:0 "Colonial Tonatiqan""
  COLONIAL_camanej:0 "Camanej"
  COLONIAL_camanej_ADJ:0 "Camaneji"
+ COLONIAL_Kamanechland:0 "Kamanechland"
+ COLONIAL_Kamanechland:0 "Kamanechlander"
  COLONIAL_Root_Culture_GetName_tonatiqan:0 "[Root.GetAdjective] Tonatiqan"
  COLONIAL_Root_Culture_GetName_tonatiqan_ADJ:0 "[Root.GetAdjective] Tonatiqani"
 
@@ -28,12 +30,16 @@
  COLONIAL_evesland_ADJ:0 "Eveslander"
  COLONIAL_alghaba:0 "Alghaba"
  COLONIAL_alghaba_ADJ:0 "Alghabian"
+ COLONIAL_koniginland:0 "Königinland"
+ COLONIAL_koniginland_ADJ:0 "Königinlander"
  COLONIAL_Root_Culture_GetName_grossenseen:0 "[Root.GetAdjective] Grossenseen"
  COLONIAL_Root_Culture_GetName_grossenseen_ADJ:0 "[Root.GetAdjective] Grossenseeni"
 
  colonial_talamgalt:0 "Colonial Talamgalt"
  COLONIAL_talamgalt_custom:0 "Talamgalt"
  COLONIAL_talamgalt_custom_ADJ:0 "Talamgalter"
+ COLONIAL_new_salia:0 "New Salia"
+ COLONIAL_new_salia_ADJ:0 "New Salian"
  COLONIAL_Root_Culture_GetName_talamgalt:0 "[Root.GetAdjective] Talamgalt"
  COLONIAL_Root_Culture_GetName_talamgalt_ADJ:0 "[Root.GetAdjective] Talamgalter"
  
@@ -48,5 +54,7 @@
  COLONIAL_Root_Culture_GetName_tarhia_ADJ:0 "[Root.GetAdjective] Tarhian"
 
  colonial_moorfluss:0 "Colonial Moorfluss"
+ COLONIAL_moorflussland:0 "Moorflussland"
+ COLONIAL_moorflussland_ADJ:0 "Moorflusslander"
  COLONIAL_Root_Culture_GetName_moorfluss:0 "[Root.GetAdjective] Moorfluss"
  COLONIAL_Root_Culture_GetName_moorfluss_ADJ:0 "[Root.GetAdjective] Moorflusser"
