--- a/localisation/TD_bohemia_flavour_l_english.yml
+++ b/localisation/TD_bohemia_flavour_l_english.yml
@@ -3,3 +3,21 @@
  td_bohemia.1.desc:0 "The king is known to be a mad person, often demanding impossible to complete requests only to get bored after they are completed. Recently, he has made a claim that entire nation of bohemia comes from a parallel universe where our continent of taedium is called 'Europe', the Saelian Empire is called 'Holy Roman Empire' and Kriegerstein is actually called 'Oustria'. He is so sure of his theory, than he now seeks a way to 'return home' and is becoming increasingly dangerous for himself and the entire kingdom. How shall we proceed?"
  td_bohemia.1.a:0 "His son will take his place."
  td_bohemia.1.b:0 "If king says it's true, then it MUST be true!"
+
+ bohemian_ideas:0 "Bohemian Ideas"
+ bohemian_ideas_start:0 "Bohemian Traditions"
+ bohemian_ideass_bonus:0 "Bohemian Ambitions"
+ bohemia_bohemian_banking:0 "Bohemian Banking"
+ bohemia_bohemian_banking_desc:0 "History of western banking is closely related to the economic history of Bohemia. As the old centre of the Empire and neutrality in most major conflicts has created a perfect conditions for banking do develop and innovate."
+ bohemia_runga_valley:0 "Runga Valley"
+ bohemia_runga_valley_desc:0 "'Bohemia' is a land commonly know as surrounded by 3 mountain ranges - Okrajna, Bohmins and Cacumuds. This creates a secure valley with easily defendable chockepoints guaranteeing security of ou nation."
+ bohemia_imperial_nostalgia:0 "Imperial Nostalgia"
+ bohemia_imperial_nostalgia_desc:0 "History of Bohemia and the Empire goes as far back as millenium with Saelian and proto-bohemian alliance. This continues until bohemia officialy joins the empire and - after some time - king of Bohemia is elected the Emperor in 1281. This period is known for its internal and external stability; many wish to return to these glory days."
+ bohemia_riches_of_the_earth:0 "Riches of the Earth"
+ bohemia_riches_of_the_earth_desc:0 "Bohemian basin is a bountiful land with a variety of available resources. Fertile farmlands of river Runga, salt and copper mining operations in the eastern highland and many rich cities producing luxury resources like glass and clothing. With these riches we can easily reinvest the capital back into the land."
+ bohemia_diplomatic_ministry:0 "Diplomatic Ministry"
+ bohemia_diplomatic_ministry_desc:0 "Bohemian time as the land of the Emperor has taught the ruling class many things - one of which being the art of diplomacy. Many diplomatic guides have been written by our authors and shared throughout the continent. This experience is critical in the increasingly dense network of relationships of the world. Diplomatic ministry was created to smoothen the process of international trade and diplomacy."
+ bohemia_geoberic_trade:0 "Geoberic Trade"
+ bohemia_geoberic_trade_desc:0 "With the discovery of the New World the global economic center shifted from Maqitan sea to Niheyan Ocean. Thanks to this, bohemia now lies in the centre of the trade instead of borderlands. Many nations wish to obtain chantlian and venatian riches - tobacco, cocoa, potatoes, tomatoes, slaves and cotton have become a common trading good. We can work as a middle man between the two words and profit from the silvestrine greed."
+ bohemia_advanced_taxation:0 "Advanced Taxation"
+ bohemia_advanced_taxation_desc:0 "Managing the massive amounts of production and trade helpes us develop a modern taxing system. Many tried to avoid paying taxes and it didn't turn out too good for them, so you better pay up!"
