--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -43,3 +43,4 @@
  western_niheyan_ocean:0 "Western Niheyan Ocean"
  eastern_amin_ocean:0 "Eastern Amin Ocean"
  thiccet_region:0 "Thiccet"
+ visparaya_region:0 "Visparaya"
