--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -591,4 +591,21 @@
  CIT_ADJ:0 "Cittila"
 
  UEY:0 "Ueyaltepatl"
- UEYA_DJ:0 "Ueyaltepatli"
+ UEY_ADJ:0 "Ueyaltepatli"
+
+ AHN:0 "Ahnoyas"
+ AHN_ADJ:0 "Ahnoyasi"
+ DUR:0 "Durisas"
+ DUR_ADJ:0 "Durisi"
+ FRS:0 "Frasatah"
+ FRS_ADJ:0 "Frasatahi"
+ YAM:0 "Yamaat"
+ YAM_ADJ:0 "Yamaati"
+ HAN:0 "Haniyan"
+ HAN_ADJ:0 "Haniyani"
+ ASO:0 "Asonam"
+ ASO_ADJ:0 "Asonami"
+ AYA:0 "Ayanihat"
+ AYA_ADJ:0 "Ayanihati"
+ NAQ:0 "Naqira"
+ NAQ_ADJ:0 "Naqiran"
