--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -43,3 +43,6 @@
  talamgalt_estuary_tradenode:0 "Talamgalt Estuary"
  tarhia_tradenode:0 "Lower Tarhia"
  thiccet_tradenode:0 "Thiccet"
+ qarasam_tradenode:0 "Qarasam"
+ frasatah_tradenode:0 "Frasatah"
+ qubrayia_tradenode:0 "Qubrayia"
