--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -609,3 +609,16 @@
  AYA_ADJ:0 "Ayanihati"
  NAQ:0 "Naqira"
  NAQ_ADJ:0 "Naqiran"
+ FAM:0 "Faramqars"
+ FAM_ADJ:0 "Faramqarsi"
+ QAR:0 "Qarum"
+ QAR_ADJ:0 "Qarumi"
+ AUR:0 "Auruvata"
+ AUR_ADJ:0 "Auruvatan"
+ PAR:0 "Parahaw"
+ PAR_ADJ:0 "Parahawi"
+ QAW:0 "Qawart"
+ QAW_ADJ:0 "Qawarti"
+ SUM:0 "Sumawat"
+ SUM_ADJ:0 "Sumawati"
+ 
