Localisation and Cultures to steppes
- title

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -622,3 +622,23 @@
  SUM:0 "Sumawat"
  SUM_ADJ:0 "Sumawati"
  
+ ABS:0 "Absukha"
+ ABS_ADJ:0 "Absukhan"
+ SRU:0 "Srushta"
+ SRU_ADJ:0 "Srushtan"
+ BOF:0 "Boforia"
+ BOF_ADJ:0 "Boforian"
+ GEU:0 "Geubiua"
+ GEU_ADJ:0 "Geubiuan"
+ KUG:0 "Kugenia"
+ KUG_ADJ:0 "Kugenian"
+ MAO:0 "Macoti"
+ MAO_ADJ:0 "Macotian"
+ OKS:0 "Oksthia"
+ OKS_ADJ:0 "Oksthian"
+ SIH:0 "Sihikdei"
+ SIH_ADJ:0 "Sihikdeii"
+ SUG:0 "Saugans"
+ SUG_ADJ:0 "Sauganian"
+ VIS:0 "Visicia"
+ VIS_ADJ:0 "Visician"
