--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -46,3 +46,6 @@
  qarasam_tradenode:0 "Qarasam"
  frasatah_tradenode:0 "Frasatah"
  qubrayia_tradenode:0 "Qubrayia"
+ ehwitraw_tradenode:0 "Ehwitraw"
+ mewitasr_tradenode:0 "Mewitasr"
+ 
