--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -44,3 +44,4 @@
  eastern_amin_ocean:0 "Eastern Amin Ocean"
  thiccet_region:0 "Thiccet"
  visparaya_region:0 "Visparaya"
+ qawartia_region:0 "Qawartia"
