--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -24,7 +24,7 @@
  mammeria_region:0 "Mammeria"
  fravasum_bay_region:0 "Fravasumi Bay"
  hestan_region:0 "Hestan"
- west_maqitan_sea:0 "west Maqitan Sea"
+ maqitan_sea:0 "Maqitan Sea"
  tonatitlan_region:0 "Tonatitlan"
  nalanaq_region:0 "Nalanaq"
  xamaneh_region:0 "Xamaneh"
