--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -25,6 +25,7 @@
  northern_tarhian_coast_area:0 "Northern Tarhian Coast"
  dalvian_waters_area:0 "Dalvian Waters"
  sea_of_oiva:0 "Sea of Oiva"
+ middle_maqitian_sea_area:0 "Central Maqitan Sea"
  west_maqitian_sea_area:0 "Western Maqitan Sea"
 
  yanla_area:0 "Yanla"
