--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -3,3 +3,4 @@
  villit_miehet_merc:0 "Villit Miehet"
  free_chevaliers_merc:0 "Free Chevaliers"
  glaser_band:0 "Glaser Band"
+ elite_geniburgh_forces:0 "§JElite Geniburgher Forces§!"
