--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1397,7 +1397,7 @@
  PROV1396:0 "1396"
  PROV1397:0 "1397"
  PROV1398:0 "1398"
- PROV1399:0 "1399"
+ PROV1399:0 "Barzakhan"
  PROV1400:0 "1400"
  PROV1401:0 "1401"
  PROV1402:0 "1402"
