--- a/localisation/TD_Visparaya_flavour_l_english.yml
+++ b/localisation/TD_Visparaya_flavour_l_english.yml
@@ -2,3 +2,7 @@
  fravasumi_ideas:0 "Fravasumi Ideas"
  fravasumi_ideas_start:0 "Fravasumi Traditions"
  fravasumi_ideas_bonus:0 "Fravasumi Ambitions"
+
+ ahnoyasi_ideas:0 "Ahnoyasi Ideas"
+ ahnoyasi_ideas_start:0 "Ahnoyasi Traditions"
+ ahnoyasi_ideas_bonus:0 "Ahnoyasi Ambitions"
