formables + frasatah ideas + flags

--- a/localisation/TD_Visparaya_flavour_l_english.yml
+++ b/localisation/TD_Visparaya_flavour_l_english.yml
@@ -6,3 +6,7 @@
  ahnoyasi_ideas:0 "Ahnoyasi Ideas"
  ahnoyasi_ideas_start:0 "Ahnoyasi Traditions"
  ahnoyasi_ideas_bonus:0 "Ahnoyasi Ambitions"
+
+ frasatahi_ideas:0 "Frasatahi Ideas"
+ frasatahi_ideas_start:0 "Frasatahi Traditions"
+ frasatahi_ideas_bonus:0 "Frasatahi Ambitions"
