--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -128,6 +128,11 @@
 
  visparayan_group:0 "Visparayan"
  fravasumi:0 "Fravasumi"
+ varazan:0 "Varazan"
+ raxasam:0 "Raxasam"
+ baraqazhi:0 "Baraqazhi"
+ aroshas:0 "Aroshas"
+ saenayan:0 "Saenayan"
 
  zakarturi_group:0 "Zakarturi"
  mesiheisi:0 "Mesiheisi"
