--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -642,3 +642,8 @@
  SUG_ADJ:0 "Sauganian"
  VIS:0 "Visicia"
  VIS_ADJ:0 "Visician"
+
+ VIP:0 "Visparaya"
+ VIP_ADJ:0 "Visparayan"
+ VAZ:0 "Varazanah"
+ VAZ_ADJ:0 "Varazan"
