--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -50,3 +50,9 @@
 
  ueyaltepatl_nation_title:0 "Become the Great State @UEY"
  ueyaltepatl_nation_desc:0 "Xamanehi ambitions grow bigger and bigger, year by year. Taedian technology allows us to finally achieve the dream of defeating Tonatitlan and claiming this title for ourselves."
+
+ visparaya_nation_title:0 "Unite Visparaya @VIP"
+ visparaya_nation_desc:0 ""
+
+ varazanah_nation_title:0 "Restore Varazanah @VAZ"
+ varazanah_nation_desc:0 ""
