--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -13,3 +13,6 @@
 
  TAEDIUM_WASICHANTLIA_BOOKMARK_TITLE:0 "New World"
  TAEDIUM_WASICHANTLIA_BOOKMARK_DESC:0 ""
+
+ TAEDIUM_HESTAN_BOOKMARK_TITLE:0 "Hestani Stagnation"
+ TAEDIUM_HESTAN_BOOKMARK_DESC:0 ""
