--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -65,3 +65,12 @@
 
  settled_steppe_horde:0 "Steppe Horde"
  settled_steppe_horde_desc:0 "While being more centralized and better governed than smaller nomadic hordes, this type of horde still is focused on raiding foreign countries for loot."
+
+ varazan_aevadata_reform:0 "Varazan Aevadata"
+ varazan_aevadata_reform_desc:0 "Aevadata characterized by its strict tolerance policies encouraging the populace to assimilate with our preferred cultures."
+ AEVADATA:0 "Aevadata"
+ DATAMAKH:0 "Datamakh"
+ DATAMAKHA:0 "Datamakha"
+
+ imperial_aevadata_reform:0 "Imperial Aevadata"
+ imperial_aevadata_reform_desc:0 "Classic Aevadata government with strict religious laws, social hierarchy, absolute rulership and overall zealousness."
